# natatie_bonus_sdd

./: CMakeLists.txt  Duck.cpp  Duck.h  Lane.cpp  Lane.h  OrderedSet.cpp  OrderedSet.h  Restriction1.cpp  Restriction1.h  Restriction6.cpp  Restriction6.h  Subtask3.cpp  Subtask3.h  data.txt  main.cpp  pb_r5.cpp  pb_r5.h  pbr5_test.cpp  pbr5_test.h  task4.cpp  task4.h  task_2.cpp  task_2.h
